--- a/Client/style.css
+++ b/Client/style.css
@@ -1,9 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Paprika&display=swap');
 
-body {
+.mainpg {
     position: relative;
     display:flex;
     justify-content:center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1440px;
+    height: 1024px;
+    background: radial-gradient(44.29% 44.29% at 50% 50%, rgba(222, 201, 14, 0.813) 5.21%, #2A1F2D 97.4%);
+}
+
+.welcomepg {
+    position: relative;
     margin-left: auto;
     margin-right: auto;
     width: 1440px;
@@ -21,8 +30,8 @@ h1 {
     font-size: 64px;
     line-height: 91px;
     text-align: center;
-    text-shadow: 4px 4px 4px black;
-    color: white;
+    text-shadow: 4px 4px 4px #ccab03ce;
+    color: #2A1F2D;
     z-index: 2;
     margin-left: auto;
     margin-right: auto;
@@ -33,13 +42,12 @@ h1 {
 
     -webkit-text-fill-color: #12130F;
     -webkit-text-stroke-width: 15px;
-    -webkit-text-stroke-color: #ccab03ce;
+    -webkit-text-stroke-color: white;
+    text-shadow: 10px 10px 10px #ccab03ce;
 
     z-index: 1;
-    display:flex;
-    justify-content:center;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; 
 
 }
 
@@ -57,8 +65,6 @@ h1 {
     margin-right: auto;
 
 }
-
-
 
 #crystal-ball{
     position: absolute;
@@ -236,4 +242,19 @@ h1 {
     color: rgb(255, 255, 255);
     background-color: #2A1F2D;
     border: solid white;
+}
+.middle {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    top: 300px;
+    width:700px;
+    font-family: 'Paprika';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 57px;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    text-shadow: 4px 4px 4px black;
 }
