--- a/Client/style.css
+++ b/Client/style.css
@@ -157,12 +157,12 @@ h1 {
     margin: 0;
     border: 10px solid rgba(255, 248, 248, 0.26);
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.74);
-    /* -webkit-animation: spin 60s infinite linear; */
+    -webkit-animation: spin 60s infinite linear;
 }
-/* @-webkit-keyframes spin {
+@-webkit-keyframes spin {
     0%  {-webkit-transform: rotate(0deg);}
     100% {-webkit-transform: rotate(360deg);}   
-} */
+}
 #base{    
     position: absolute;
     display:block;
